codex edits for interactive maps, removing maps with no map submitted

--- a/index.html
+++ b/index.html
@@ -977,9 +977,29 @@
             return hostname === 'localhost' || hostname === '127.0.0.1' || hostname === '0.0.0.0';
         }
 
+        function isGitHubPagesPreview() {
+            return window.location.hostname.endsWith('.github.io');
+        }
+
+        function toSiteRelativeUrl(path) {
+            const encodedPath = path
+                .split('/')
+                .map(segment => encodeURIComponent(segment))
+                .join('/');
+            const basePath = window.location.pathname.endsWith('/')
+                ? window.location.pathname
+                : window.location.pathname.replace(/\/[^/]*$/, '/');
+            return `${basePath}${encodedPath}`;
+        }
+
         function getRenderableMapUrl(file, extension) {
             if (isLocalPreview()) {
                 return toLocalUrl(file.path);
+            }
+
+            if (isGitHubPagesPreview()) {
+                // Prefer same-origin files on GitHub Pages for better iframe compatibility.
+                return toSiteRelativeUrl(file.path);
             }
 
             if (extension === 'html') {
@@ -1222,13 +1242,23 @@
                 return;
             }
             
-            mapCountEl.textContent = `${directories.length} maps`;
             grid.innerHTML = '';
+            let renderedCount = 0;
             
             for (const dir of directories) {
                 const mapInfo = await findMapFile(dir.name);
+                if (!mapInfo) {
+                    continue;
+                }
                 const card = createMapCard(dir.name, mapInfo);
                 grid.appendChild(card);
+                renderedCount += 1;
+            }
+
+            mapCountEl.textContent = `${renderedCount} maps`;
+
+            if (renderedCount === 0) {
+                grid.innerHTML = '<div class="error-message">No map files found.</div>';
             }
         }
 
