--- a/index.html
+++ b/index.html
@@ -449,20 +449,6 @@
             font-size: 0.9rem;
         }
 
-        .interactive-preview {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: linear-gradient(135deg, #eef3f8 0%, #e2e9f1 100%);
-            color: #2f4f73;
-            font-size: 0.95rem;
-            font-weight: 600;
-            text-align: center;
-            padding: 1rem;
-        }
-
         @media (max-width: 768px) {
             .back-button {
                 top: 1rem;
@@ -1087,11 +1073,12 @@
                 const fileUrl = getRenderableMapUrl(file, extension);
                 
                 if (extension === 'html') {
-                    // Avoid loading all interactive maps in the grid: improves initial page performance.
-                    const preview = document.createElement('div');
-                    preview.className = 'interactive-preview';
-                    preview.textContent = 'Interactive map preview. Click to open.';
-                    imageContainer.appendChild(preview);
+                    const iframe = document.createElement('iframe');
+                    iframe.src = fileUrl;
+                    iframe.title = `Map: ${dirName}`;
+                    iframe.loading = 'lazy';
+                    iframe.referrerPolicy = 'no-referrer';
+                    imageContainer.appendChild(iframe);
                 } else if (['mp4', 'm4v', 'webm'].includes(extension)) {
                     const video = document.createElement('video');
                     video.src = fileUrl;
