fixing file path

--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
 
         const CARD_PREVIEW_IMAGES = {
             '2025-11-14 - Data challenge- OpenStreetMap': '2025-11-14 - Data challenge- OpenStreetMap/osm.png',
-            '2025-11-15 - Fire': 'fire.png',
+            '2025-11-15 - Fire': '2025-11-15 - Fire/fire.png',
             '2025-11-10 - Air': '2025-11-10 - Air/air.png'
         };
 
